resources/services/assisted-installer/assisted-image-service-boot-artifacts-stage.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    haproxy.router.openshift.io/timeout: "3m"
  labels:
    service: assisted-service
  name: assisted-image-service-boot-artifacts
spec:
  host: "wllyvs40ee788l7.api.stage.openshift.com"
  path: "/boot-artifacts"
  to:
    kind: Service
    name: assisted-image-service
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
