resources/services/assisted-installer/assisted-service-production.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    service: assisted-service
  name: assisted-service
spec:
  host: "zoscaru4s08w1mz.api.openshift.com"
  to:
    kind: Service
    name: assisted-service
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
