resources/services/assisted-installer/assisted-service-stage.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
    haproxy.router.openshift.io/timeout: "3m"
  labels:
    service: assisted-service
  name: assisted-service
spec:
  host: "wllyvs40ee788l7.api.stage.openshift.com"
  to:
    kind: Service
    name: assisted-service
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
