resources/services/assisted-installer/kibana-integration.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    haproxy.router.openshift.io/timeout: "3m"
  labels:
    app: kibana-proxy
  name: kibana-proxy
spec:
  host: "kibana-assisted-integration.apps.app-sre-stage-0.k3s7.p1.openshiftapps.com"
  port:
    targetPort: "3000"
  to:
    kind: Service
    name: kibana-proxy
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
