resources/services/assisted-installer/kibana-production.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
    haproxy.router.openshift.io/timeout: "3m"
  labels:
    app: kibana-proxy
  name: kibana-proxy
spec:
  host: "kibana-assisted.apps.app-sre-prod-04.i5h0.p1.openshiftapps.com"
  port:
    targetPort: "3000"
  to:
    kind: Service
    name: kibana-proxy
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
